<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_item_topic"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="@color/CadetBlue"
            android:textSize="24dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="@integer/item_horizon_short"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tv_item_title"/>
        <EditText
            android:id="@+id/etItemTitle"
            android:layout_width="0dp"
            android:layout_weight="@integer/item_horizon_long"
            android:layout_height="wrap_content"
            android:maxLength="10"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="@integer/item_horizon_short"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tv_item_grocery"/>
        <EditText
            android:id="@+id/etItemGrocery"
            android:layout_width="0dp"
            android:layout_weight="@integer/item_horizon_long"
            android:layout_height="wrap_content"
            android:maxLength="30"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_view_click_height"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="@integer/item_horizon_short"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tv_item_location"/>
        <Spinner
            android:id="@+id/spinner"
            android:layout_width="0dp"
            android:layout_weight="@integer/item_horizon_long"
            android:layout_height="wrap_content"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_view_click_height"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="@integer/item_horizon_short"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tv_item_date"/>
        <TextView
            android:id="@+id/tv_item_date"
            android:layout_width="0dp"
            android:layout_weight="@integer/item_horizon_long"
            android:layout_height="wrap_content"
            android:hint="@string/tv_hint_date_picker"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_view_click_height"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="@integer/item_horizon_short"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tv_item_time"/>
        <TextView
            android:id="@+id/tv_item_time"
            android:layout_width="0dp"
            android:layout_weight="@integer/item_horizon_long"
            android:layout_height="wrap_content"
            android:hint="@string/tv_hint_time_picker"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_view_click_height"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="@integer/item_horizon_short"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tv_item_notify"/>
        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="0dp"
            android:layout_weight="@integer/item_horizon_long"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <RadioButton
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/tv_not_notify"/>
            <RadioButton
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/tv_every_day"/>
            <RadioButton
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/tv_target_day"/>

        </RadioGroup>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_view_click_height"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="@integer/item_horizon_short"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tv_item_ring"/>
        <TextView
            android:id="@+id/tv_item_ring"
            android:layout_width="0dp"
            android:layout_weight="@integer/item_horizon_long"
            android:layout_height="wrap_content"
            android:hint="@string/tv_hint_ring"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/btn_cancel"/>
        <Button
            android:id="@+id/btnDelete"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/btn_delete"/>
        <Button
            android:id="@+id/btnEdit"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            />
    </LinearLayout>


</LinearLayout>