<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_view_click_height"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/tv_shop_name"/>
        <EditText
            android:id="@+id/etShopName"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="match_parent"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_view_click_height"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/tv_latitude"/>
        <EditText
            android:id="@+id/etLatitude"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="match_parent"
            android:maxLength="10"
            android:inputType="numberDecimal"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_view_click_height"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/tv_longitude"/>
        <EditText
            android:id="@+id/etLongitude"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="match_parent"
            android:maxLength="10"
            android:inputType="numberDecimal"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_view_click_height"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/tv_classify"/>
        <EditText
            android:id="@+id/etClassify"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="match_parent"
            android:inputType="text"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_view_click_height"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/tv_address"/>
        <EditText
            android:id="@+id/etAddress"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="match_parent"
            android:inputType="text"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_view_click_height"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/tv_note"/>
        <EditText
            android:id="@+id/etNote"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="match_parent"
            android:inputType="text"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/btn_cancel"/>
        <Button
            android:id="@+id/btnDelete"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/btn_delete"/>
        <Button
            android:id="@+id/btnEdit"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

</LinearLayout>