<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.RingPickerFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_view_click_height"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tvSystemRing"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/tv_system_ring"/>
        <TextView
            android:id="@+id/tvCustomRing"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/tv_custom_ring"/>

    </LinearLayout>

    <ViewAnimator
        android:id="@+id/viewAnimator"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7">
        <ListView
            android:id="@+id/lvSystemRing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <Button
                android:id="@+id/btnGoBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="BACK"/>
            <TextView
                android:id="@+id/tvTest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <ListView
                android:id="@+id/lvCustomRing"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>

    </ViewAnimator>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/btn_cancel"/>
        <Button
            android:id="@+id/btnOk"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/btn_ok"/>
    </LinearLayout>


</LinearLayout>