<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:descendantFocusability="blocksDescendants">
    <!--descendantFocusability="blocksDescendants" 因為有放ToggleButton,
    所以要阻止它的訊號,避免影響這個item運作-->
        <TextView
            android:id="@+id/tvCount"
            android:layout_width="@dimen/text_view_number"
            android:layout_height="match_parent"
            android:gravity="center"
            />
        <ToggleButton
            android:id="@+id/tglShow"
            android:layout_width="@dimen/text_view_click_width"
            android:layout_height="wrap_content"
            android:textOn="@string/btn_show"
            android:textOff="@string/btn_hide"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_item_title"/>
                    <TextView
                        android:id="@+id/tvSummary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/text_view_margin_left_space"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_shop_name"/>
                    <TextView
                        android:id="@+id/tvShopName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/text_view_margin_left_space"
                        />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_item_buy"/>
                <TextView
                    android:id="@+id/tvGrocery"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/text_view_margin_left_space"
                    />
            </LinearLayout>
    </LinearLayout>
    <ImageView
        android:id="@+id/imgIcon"
        android:layout_width="@dimen/btn_click_width_small"
        android:layout_height="@dimen/btn_click_width_small"
        android:layout_gravity="center"
        />

</LinearLayout>